# SnailsPace

./: .gitignore  CMakeLists.txt  README.md  main.c  main2.c
assets/: elso_folyoso.obj.REMOVED.git-id  elso_folyoso2.mtl
fonts/: SDL2_ttf.dll.REMOVED.git-id
include/: ai.h  camera.h  credits.h  dialogue_data.h  game_manager.h  game_types.h  graphics.h  graphics_effects.h  graphics_lighting.h  graphics_particles.h  input_manager.h  obj_loader.h  player.h  scene.h  sounds.h  tic_tac_toe.h  triggers.h  ui_manager.h  visual_novel.h  world_builder.h
src/: ai.c  camera.c  dialogue_data.c  game_manager.c  game_types.c  graphics.c  graphics_effects.c  graphics_lighting.c  graphics_particles.c  input_manager.c  obj_loader.c  player.c  scene.c  sounds.c  tic_tac_toe.c  triggers.c  ui_manager.c  visual_novel.c  world_builder.c
